suggestions, description for slash cmds

--- a/config.json
+++ b/config.json
@@ -1,5 +1,7 @@
 {
   "insert_channel": 1389072357372592270,
   "output_channel": 1347675184097656993,
-  "autolog_channel": 1389072423998984273
+  "autolog_channel": 1389072423998984273,
+  "suggestions_channel": 1306404822932525166,
+  "suggest_channel": 1306404822932525166
 }
