modified:   config.json 	modified:   main.py

--- a/config.json
+++ b/config.json
@@ -3,5 +3,6 @@
   "output_channel": 1347675184097656993,
   "autolog_channel": 1389072423998984273,
   "suggestions_channel": 1306404822932525166,
-  "suggest_channel": 1306404822932525166
+  "suggest_channel": 1306404822932525166,
+  "current_index": 1
 }
